--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Translation</title>
 </head>
-<body>
-    
+<body
+ class="bg-gray-900 flex items-center justify-center h-screen">
+    <div class="bg-gray-700 shadow-md rounded-lg p-6 max-w-md w-full">
+        <h1 class="text-2xl font-semibold text-white  text-center">Translation</h1>
+        <textarea class="w-full h-32 p-3 border border-gray-100 text-white  rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 resize-none" placeholder="Type text here..."></textarea>
+
+        <div class="mt-4">
+           <label for="voiceSelect" class="block text-sm font-medium text-white mb-2">Select Voice</label>
+           <select  id="voiceSelect">
+              
+           </select>
+        </div>
+    </div>
 </body>
 </html>
