--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,12 @@
 
         <div class="mt-4">
            <label for="voiceSelect" class="block text-sm font-medium text-white mb-2">Select Voice</label>
-           <select  id="voiceSelect">
-              
+           <select  id="voiceSelect"
+             class="w-full p-3 border text-white bg-gray-700 border-gray-100 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+           >
+              <option value="default">Default</option>
+              <option value="voice1">Voice 1</option>
+              <option value="voice2">Voice 2</option>
            </select>
         </div>
     </div>
