--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
               <option value="voice2">Voice 2</option>
            </select>
         </div>
+
+        <button class="mt-6 w-full bg-blue-500 hover:bg-blue-600 text-white font-medium py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" id="play_btn">Play Voice</button>
     </div>
 </body>
 </html>
