--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
  class="bg-gray-900 flex items-center justify-center h-screen">
     <div class="bg-gray-700 shadow-md rounded-lg p-6 max-w-md w-full">
         <h1 class="text-2xl font-semibold text-white  text-center">Translation</h1>
-        <textarea class="w-full h-32 p-3 border border-gray-100 text-white  rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 resize-none" placeholder="Type text here..."></textarea>
+        <textarea id="text_input" class="w-full h-32 p-3 border border-gray-100 text-white  rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 resize-none" placeholder="Type text here..."></textarea>
 
         <div class="mt-4">
            <label for="voiceSelect" class="block text-sm font-medium text-white mb-2">Select Voice</label>
@@ -26,5 +26,7 @@
 
         <button class="mt-6 w-full bg-blue-500 hover:bg-blue-600 text-white font-medium py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" id="play_btn">Play Voice</button>
     </div>
+
+    <script src="./app.js"></script>
 </body>
 </html>
