--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,19 @@
         <h1 class="text-2xl font-semibold text-white  text-center">Translation</h1>
         <textarea id="text_input" class="w-full h-32 p-3 border border-gray-100 text-white  rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 resize-none" placeholder="Type text here..."></textarea>
 
+        <!-- Language Selector -->
+         <div class="mt-4">
+            <label for="languageSelect"
+              class="block text-sm font-medium text-white mb-2"
+            >
+             Select Language
+            </label>
+
+            <select id="language_select" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-white bg-gray-700">
+
+            </select>
+         </div>
+        <!-- Voice selector -->
         <div class="mt-4">
            <label for="voiceSelect" class="block text-sm font-medium text-white mb-2">Select Voice</label>
            <select  id="voiceSelect"
